<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/image_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:layout_marginHorizontal="2dp"
        android:textSize="16sp"
        android:text="@string/hint_email" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="@id/et_email"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintBottom_toBottomOf="@id/et_email"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_edit_text_shadow" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:background="@drawable/bg_edit_text_rounded_white"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginHorizontal="2dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center_vertical"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="58dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="2dp"
        android:textSize="16sp"
        android:text="@string/hint_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintBottom_toBottomOf="@id/et_password"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_edit_text_shadow" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:background="@drawable/bg_edit_text_rounded_white"
            android:padding="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:singleLine="true"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="58dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="192dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"

            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_button_shadow" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/action_login"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="26dp"
            app:backgroundTint="#331D0B"
            android:textAllCaps="false"
            android:textColor="#FF9035"
            tools:layout_editor_absoluteX="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:padding="30dp"
        android:text="@string/text_register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp" />
</LinearLayout>