<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="26dp"
    tools:context=".ChangePasswordActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/cd_back_button"
        android:src="@drawable/ic_circle_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_change_password"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="26dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hint_current_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_edit_text_shadow"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:background="@drawable/bg_edit_text_rounded_white"
            android:padding="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:singleLine="true"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="58dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_forgot_password"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hint_new_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="@id/et_new_password"
            app:layout_constraintStart_toStartOf="@id/et_new_password"
            app:layout_constraintEnd_toEndOf="@id/et_new_password"
            app:layout_constraintBottom_toBottomOf="@id/et_new_password"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_edit_text_shadow" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:background="@drawable/bg_edit_text_rounded_white"
            android:padding="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:singleLine="true"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="58dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hint_password_confirmation"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="@id/et_password_confirmation"
            app:layout_constraintStart_toStartOf="@id/et_password_confirmation"
            app:layout_constraintEnd_toEndOf="@id/et_password_confirmation"
            app:layout_constraintBottom_toBottomOf="@id/et_password_confirmation"
            android:layout_marginTop="4dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_edit_text_shadow" />

        <EditText
            android:id="@+id/et_password_confirmation"
            android:layout_width="match_parent"
            android:background="@drawable/bg_edit_text_rounded_white"
            android:padding="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:singleLine="true"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="58dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="192dp"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            app:layout_constraintTop_toTopOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="@id/btn_save"
            app:layout_constraintBottom_toBottomOf="@id/btn_save"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:importantForAccessibility="no"
            android:background="@drawable/bg_button_shadow" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/action_save"
            android:background="@drawable/rounded_25"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="25dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:backgroundTint="#331D0B"
            android:textAllCaps="false"
            android:textColor="#FF9035"
            tools:layout_editor_absoluteX="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>